syntax = "proto3";

package auth;

message AuthRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    int32 status = 1;
    optional string result = 2;
    optional string errorMessage = 3;
    optional string token = 4;
}

service AuthService {
    rpc Register (AuthRequest) returns (AuthResponse);
    rpc Login (AuthRequest) returns (AuthResponse);
}